--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,52 +7,122 @@
     <meta name="description" content="URL Shortener">
     <link href="favicon.png" rel="shortcut icon" type="image/x-icon">
     <style>
-        div.content {
+        .title {
+            padding: 12px;
+            font-size: 1.8em;
+        }
+
+        .content {
             text-align: center;
         }
 
-        div.content > textarea {
+        .content textarea {
             width: 30em;
             height: 12em;
             margin: 1em;
+        }
+
+        .content button {
+            padding: 3px 12px 3px 12px;
+            cursor: pointer;
+        }
+
+        .content a {
+            color: #2440b3;
+            font-size: 1.2em;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+
+        .github-corner:hover .octo-arm {
+            animation: octocat-wave 560ms ease-in-out
+        }
+
+        @keyframes octocat-wave {
+            0%, 100% {
+                transform: rotate(0)
+            }
+            20%, 60% {
+                transform: rotate(-25deg)
+            }
+            40%, 80% {
+                transform: rotate(10deg)
+            }
+        }
+
+        @media (max-width: 500px) {
+            .github-corner:hover .octo-arm {
+                animation: none
+            }
+
+            .github-corner .octo-arm {
+                animation: octocat-wave 560ms ease-in-out
+            }
         }
     </style>
 </head>
 <body>
 <div class="content">
-    <textarea id="source" placeholder="URL Here"></textarea>
-    <div class="buttons">
+    <p class="title">URL Shortener</p>
+    <textarea id="input" placeholder="URL Here"></textarea>
+    <div>
         <button id="shorten" onclick="shorten()">Shorten</button>
     </div>
-    <div>
-        <a id="target" target="_blank" href=""></a>
+    <div style="margin: 1em;">
+        <a id="output" target="_blank" href=""></a>
     </div>
 </div>
-</body>
+<a href="https://github.com/yihleego/url-shortener-go" class="github-corner" aria-label="View source on GitHub">
+    <svg width="80" height="80" viewBox="0 0 250 250"
+         style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+        <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+              fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+        <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+              fill="currentColor" class="octo-body"></path>
+    </svg>
+</a>
 <script>
-    let input = document.getElementById("source")
-    let button = document.getElementById("shorten");
+    const domain = 'uuw.io';
+    let input = document.getElementById('input');
+    let output = document.getElementById('output');
+    let button = document.getElementById('shorten');
 
     function shorten() {
         let url = input.value;
-        if (!url) {
-            return
+        if (!url || !isURL(url)) {
+            output.removeAttribute("href");
+            output.innerHTML = `Not a url '${url}'`;
+            return;
         }
-        button.disabled = true
-        fetch("/urls/", {"method": "POST", "body": url})
-          .then(res => {
-              if (res.ok) {
-                  return res.text()
-              }
-              throw res.statusText
-          })
-          .then(s => {
-              let a = document.getElementById("target");
-              a.href = 'https://uuw.io/' + s;
-              a.innerHTML = 'uuw.io/' + s;
-          })
-          .catch(err => alert(err))
-          .finally(() => button.disabled = false);
+        button.disabled = true;
+        fetch('/urls/', {'method': 'POST', 'body': url})
+            .then(res => {
+                if (!res.ok) {
+                    throw res.statusText;
+                }
+                return res.text();
+            })
+            .then(data => {
+                output.href = `https://${domain}/${data}`;
+                output.innerHTML = `${domain}/${data}`;
+            })
+            .catch(err => {
+                output.removeAttribute("href");
+                output.innerHTML = err;
+            })
+            .finally(() => button.disabled = false);
+    }
+
+    function isURL(str) {
+        let pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
+            '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.?)+[a-z]{2,}|' + // domain name
+            '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
+            '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
+            '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
+            '(\\#[-a-z\\d_]*)?$', 'i'); // fragment locator
+        return pattern.test(str);
     }
 </script>
+</body>
 </html>
